--- a/index/index.html
+++ b/index/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+   
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
+    
     <script src="main.js"></script>
 </head>
 
@@ -17,11 +19,18 @@
 
     <img src="https://images.unsplash.com/photo-1530212811523-1f5d5d8b19cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Cute duckling sitting on grass" width="400" height="300">
 
-    <a target="blank" href="more_ducks.html">
-        <p>
-            More Ducks!
-        </p> 
+    <a href="more_ducks.html">
+            <p>
+                More Ducks!
+            </p> 
     </a>
+        
+    <a id="search" target="blank" href="http://google.com">
+        <p>
+            Search for Ducks!
+        </p>
+    </a>
+   
 
 <div id="text">
     <p>
@@ -40,7 +49,9 @@
 
 <br>
 
-<footer>&copy;Dorkat Duckyt</footer>
-</body>
+<div id="footer">
+    &copy;Dorkat Duckyt
+</div>
 
+</body>
 </html>
