--- a/index/index.html
+++ b/index/index.html
@@ -12,46 +12,47 @@
 </head>
 
 <body>
-
-    <h1 style="text-align:center;">Tää on dorka juttu!</h1> 
     
-    <hr>
 
-    <img src="https://images.unsplash.com/photo-1530212811523-1f5d5d8b19cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Cute duckling sitting on grass" width="400" height="300">
+        <h1 style="text-align:center;">Tää on dorka juttu!</h1> 
 
-    <a href="more_ducks.html">
+        <hr>
+
+        <img src="https://images.unsplash.com/photo-1530212811523-1f5d5d8b19cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Cute duckling sitting on grass" width="400" height="300">
+
+        <a href="more_ducks.html" id="active">
             <p>
                 More Ducks!
             </p> 
-    </a>
-        
-    <a id="search" target="blank" href="http://google.com">
-        <p>
-            Search for Ducks!
-        </p>
-    </a>
+        </a>
+        <a id="search" target="blank" href="http://google.com">
+            <p>
+                Search for Ducks!
+            </p>
+        </a>
    
 
-<div id="text">
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Dicta amet provident porro quia non nostrum illum, distinctio, atque nobis sit libero vitae quas recusandae praesentium molestiae odio obcaecati ab! Nesciunt?
-    </p>
-    <blockquote>
-        Elsa täti on hyvin pettynyt - Elsa
-    </blockquote>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Dicta amet provident porro quia non nostrum illum, distinctio, atque nobis sit libero vitae quas recusandae praesentium molestiae odio obcaecati ab! Nesciunt?
-    </p>
+    <div id="text">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.    <br>Dicta amet provident porro quia non nostrum illum, distinctio, atque nobis sit libero vitae quas recusandae praesentium molestiae odio obcaecati ab! Nesciunt?
+        </p>
+        <blockquote>
+            Elsa täti on hyvin pettynyt - Elsa
+        </blockquote>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Dicta amet provident porro quia non nostrum illum, distinctio, atque nobis sit libero vitae quas recusandae praesentium molestiae odio obcaecati ab! Nesciunt?
+        </p>
 
-    <button >Join the Duck Empire</button>
+        <button >
+            Join the Duck Empire
+        </button>
+    </div>
 
-</div>
+    <br>
 
-<br>
-
-<div id="footer">
-    &copy;Dorkat Duckyt
-</div>
+    <div id="footer">
+        <small>&copy;Dorkat Duckyt</small>
+    </div>
 
 </body>
 </html>
