--- a/index/more_ducks.html
+++ b/index/more_ducks.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/style2.css" />
     <script src="main.js"></script>
 </head>
 
@@ -15,23 +15,26 @@
 
     <hr>
 
-    <a target="blank" href="index.html">
+    <a href="index.html">
             <p>
                 Back to Main Page
             </p> 
-        </a>
+    </a>
 
-    <img src="https://images.unsplash.com/photo-1442689859438-97407280183f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Many cure yellow-brown ducklings" width="400" height="300">
+    <div id="images">
+        <img src="https://images.unsplash.com/photo-1442689859438-97407280183f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Many cure yellow-brown ducklings" width="400" height="300">
 
-    <img src="https://images.unsplash.com/photo-1535129991172-d042d9834e49?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Many sleepy little ducklings" width="400" height="300">
+        <img src="https://images.unsplash.com/photo-1535129991172-d042d9834e49?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Many sleepy little ducklings" width="400" height="300">
 
-    <img src="https://images.unsplash.com/photo-1525538182201-02cd1909effb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1296&q=60" alt="Many shelves full off rubber ducks" width="400" height="300">
+        <img src="https://images.unsplash.com/photo-1525538182201-02cd1909effb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1296&q=60" alt="Many shelves full off rubber ducks" width="400" height="300">
+    </div>
 
-    </body>
+    <br>
 
-<br>
+    <div id="footer">
+        <small>&copy;Dorkat Duckyt</small>
+    </div>
 
-<footer>&copy;Dorkat Duckyt</footer>
 </body>
 
 </html>
