--- a/index/index.html
+++ b/index/index.html
@@ -14,13 +14,15 @@
 <body>
     
 
-        <h1 style="text-align:center;">Tää on dorka juttu!</h1> 
+        <h1 style="text-align:center;">
+            <i>Tää on dorka juttu!</i>
+        </h1> 
 
         <hr>
 
         <img src="https://images.unsplash.com/photo-1530212811523-1f5d5d8b19cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Cute duckling sitting on grass" width="400" height="300">
 
-        <a href="more_ducks.html" id="active">
+        <a id="active" href="more_ducks.html" >
             <p>
                 More Ducks!
             </p> 
