--- a/index/more_ducks.html
+++ b/index/more_ducks.html
@@ -11,7 +11,9 @@
 
 <body>
 
-    <h1 style="text-align:center;">More Ducks</h1>
+    <h1 style="text-align:center;">
+        <i>More Ducks</i>
+    </h1>
 
     <hr>
 
