--- a/index/index.html
+++ b/index/index.html
@@ -13,48 +13,56 @@
 
 <body>
     
+    <header>
+            <h1 style="text-align:center;">
+                <i>Tää on dorka juttu!</i>
+            </h1> 
 
-        <h1 style="text-align:center;">
-            <i>Tää on dorka juttu!</i>
-        </h1> 
+            <hr>
 
-        <hr>
+            <img src="https://images.unsplash.com/photo-1530212811523-1f5d5d8b19cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Cute duckling sitting on grass" width="400" height="300">
 
-        <img src="https://images.unsplash.com/photo-1530212811523-1f5d5d8b19cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Cute duckling sitting on grass" width="400" height="300">
+            <ul>
+                <li>
+                    <a id="active" href="more_ducks.html" >
+                            More Ducks!</a>
+                </li>
+                <li>
+                    <a id="search" target="blank" href="http://google.com">   
+                            Search for Ducks!
+                    </a>
+                </li>
+            </ul>
+    </header>   
 
-        <a id="active" href="more_ducks.html" >
+    <main>
+        <div class="text">
             <p>
-                More Ducks!
-            </p> 
-        </a>
-        <a id="search" target="blank" href="http://google.com">
-            <p>
-                Search for Ducks!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.    Dicta amet provident porro quia non nostrum illum, distinctio, atque nobis sit libero vitae quas recusandae praesentium molestiae odio obcaecati ab! Nesciunt?
             </p>
-        </a>
-   
+            <blockquote>
+                Elsa täti on hyvin pettynyt - Elsa
+            </blockquote>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta amet provident porro quia non nostrum illum, distinctio, atque nobis sit libero vitae quas recusandae praesentium molestiae odio obcaecati ab! Nesciunt?
+            </p>
 
-    <div id="text">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.    <br>Dicta amet provident porro quia non nostrum illum, distinctio, atque nobis sit libero vitae quas recusandae praesentium molestiae odio obcaecati ab! Nesciunt?
-        </p>
-        <blockquote>
-            Elsa täti on hyvin pettynyt - Elsa
-        </blockquote>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Dicta amet provident porro quia non nostrum illum, distinctio, atque nobis sit libero vitae quas recusandae praesentium molestiae odio obcaecati ab! Nesciunt?
-        </p>
+        </div>
+        
+        <br>
 
         <button >
-            Join the Duck Empire
+                Join the Duck Empire
         </button>
-    </div>
+    </main>
 
     <br>
-
-    <div id="footer">
-        <small>&copy;Dorkat Duckyt</small>
-    </div>
+    <br>
+    <footer>
+        <div id="footer">
+            <small>&copy;Dorkat Duckyt</small>
+        </div>
+    </footer>
 
 </body>
 </html>
