--- a/index/more_ducks.html
+++ b/index/more_ducks.html
@@ -1,59 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>MORE DUCKS!!!</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/style2.css" />
-    <script src="main.js"></script>
-</head>
+    <head>
 
-<body>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="../css/style2.css" />  <title>MORE DUCKS!!!</title>
+        <script src="main.js"></script>
+    </head>
 
-    <header>
-        <h1 style="text-align:center;">
-            <i>More Ducks</i>
-        </h1>
+    <body>
 
-        <hr>
+        <div class="header">
+            <header>
+                <h1 style="text-align:center;">
+                    <i>More Ducks</i>
+                </h1>
+            </header>
+        </div>
 
-        <a href="index.html">
+        <div class="nav">
+            <a href="index.html">
                 <p>
                     Back to Main Page
                 </p> 
-        </a>
-    </header>
-
-    <main>
-        <div class="images">
-            <img src="https://images.unsplash.com/photo-1442689859438-97407280183f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Many cure yellow-brown ducklings" width="400" height="300">
-
-            <img src="https://images.unsplash.com/photo-1535129991172-d042d9834e49?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Many sleepy little ducklings" width="400" height="300">
-
-            <img src="https://images.unsplash.com/photo-1525538182201-02cd1909effb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1296&q=60" alt="Many shelves full off rubber ducks" width="400" height="300">
-
-            <img src="https://images.unsplash.com/photo-1541185053539-cd6fbc666fd1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Ducks looking in to the distance" width="15.9%" height="">
-
-            <img src="https://images.unsplash.com/photo-1499334758287-dc8133b315e9?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60" alt="Sea of dorky rubber ducks" width="400" height="300">
-
-            <img src="https://images.unsplash.com/photo-1530059886-5ff212bca560?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Duck with water on its face" width="400" height="300">
-
-            <img src="https://images.unsplash.com/photo-1533005835153-c434f03fe88a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Lonely duckling on grass" width="400" height="300">
-
-            <img src="https://images.unsplash.com/photo-1546471969-8450cff03902?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Many rubber ducks on neat rows on shelves" width="400" height="300">
-
-            <img src="https://images.unsplash.com/photo-1506847345862-ea1bf8c39bf1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Duckling with its leg raised" width="400" height="300">
+            </a>
         </div>
-    </main>
+        
+        <div class="main">
+                <img src="https://images.unsplash.com/photo-1442689859438-97407280183f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Many cure yellow-brown ducklings" width="400" height="300">
 
-    <br>
-    <footer>
-    <div id="footer">
-        <small>&copy;Dorkat Duckyt</small>
-    </div>
-    </footer>
+                <img src="https://images.unsplash.com/photo-1535129991172-d042d9834e49?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1296&q=60" alt="Many sleepy little ducklings" width="400" height="300">
 
-</body>
+                <img src="https://images.unsplash.com/photo-1525538182201-02cd1909effb?ixlib=rb-1.2.1&auto=format&fit=crop&w=1296&q=60" alt="Many shelves full off rubber ducks" width="400" height="300">
+
+                <img src="https://images.unsplash.com/photo-1541185053539-cd6fbc666fd1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Ducks looking in to the distance" width="" height="300">
+
+                <img src="https://images.unsplash.com/photo-1499334758287-dc8133b315e9?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60" alt="Sea of dorky rubber ducks" width="400" height="300">
+
+                <img src="https://images.unsplash.com/photo-1530059886-5ff212bca560?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Duck with water on its face" width="400" height="300">
+
+                <img src="https://images.unsplash.com/photo-1533005835153-c434f03fe88a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Lonely duckling on grass" width="400" height="300">
+
+                <img src="https://images.unsplash.com/photo-1546471969-8450cff03902?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Many rubber ducks on neat rows on shelves" width="400" height="300">
+
+                <img src="https://images.unsplash.com/photo-1506847345862-ea1bf8c39bf1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60" alt="Duckling with its leg raised" width="400" height="300">
+        </div>
+
+        <div class="footer">
+            <small>&copy;Dorkat Duckyt</small>
+        </div>
+
+    </body>
 
 </html>
